--- a/OpenGL/OpenGL.vcxproj
+++ b/OpenGL/OpenGL.vcxproj
@@ -120,7 +120,7 @@
   <ItemGroup>
     <ClCompile Include="dep\AIEUtilities\Gizmos.cpp" />
     <ClCompile Include="dep\AIEUtilities\gl_core_4_4.c" />
-    <ClCompile Include="Source.cpp" />
+    <ClCompile Include="SolarSystemApplication.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="dep\AIEUtilities\Gizmos.h" />
